--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 #
 
           <div class="movie-text">
-            <h4>Batman (2022)</h4>
+            <h4>Venom (2024))</h4>
             <div class="rating-favorites">
               <div class="rating">
                 <img src="images/star.png" alt="Star Icon"/>
@@ -57,7 +57,7 @@
 #
 
         <div class="movie-description">
-          <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</span>
+          <span>Eddie Brock e Venom precisam tomar uma decisão enquanto são perseguidos por um militar misterioso e monstros alienígenas do planeta natal de Venom.</span>
         </div>
       </div>
 
