--- a/index.html
+++ b/index.html
@@ -17,35 +17,23 @@
       <input type="text" name="movie-name" id="movie-name" placeholder="Digite algum filme para pesquisar...">
       <img src="images/search-icon.svg" alt="Ícone de pesquisa" class="searchIcon">
     </div>
-
-#
-
     <div class="showOnlyFavorites">
       <input type="checkbox" name="onlyFavorites" id="onlyFavorites">
       <label for="onlyFavorites">Mostrar apenas meus filmes favoritos</label>
     </div>
-
-#
-
     <div class="movies">
       <div class="movie">
         <div class="movie-informations">
           <div class="movie-image">
-            <img src="https://img.elo7.com.br/product/original/3FBA809/big-poster-filme-batman-2022-90x60-cm-lo002-poster-batman.jpg" alt="Batman (2022)"/>
+            <img src="https://upload.wikimedia.org/wikipedia/pt/d/d2/Venom_-_The_Last_Dance_p%C3%B4ster.jpg" alt="Batman (2022)"/>
           </div>
-
-#
-
           <div class="movie-text">
-            <h4>Venom (2024))</h4>
+            <h4>Venom (2024)</h4>
             <div class="rating-favorites">
               <div class="rating">
                 <img src="images/star.png" alt="Star Icon"/>
                 <span>9.2</span>
               </div>
-
-#
-
               <div class="favorite">
                 <img src="images/heart.svg" alt="Star Icon"/>
                 <span>Favoritar</span>
@@ -53,24 +41,16 @@
             </div>
           </div>
         </div>
-
-#
-
         <div class="movie-description">
           <span>Eddie Brock e Venom precisam tomar uma decisão enquanto são perseguidos por um militar misterioso e monstros alienígenas do planeta natal de Venom.</span>
         </div>
       </div>
 
-#
-
       <div class="movie">
         <div class="movie-informations">
           <div class="movie-image">
             <img src="https://img.elo7.com.br/product/original/3FBA809/big-poster-filme-batman-2022-90x60-cm-lo002-poster-batman.jpg" alt="Batman (2022)"/>
           </div>
-
-#
-
           <div class="movie-text">
             <h4>Batman (2022)</h4>
             <div class="rating-favorites">
@@ -78,9 +58,6 @@
                 <img src="images/star.png" alt="Star Icon"/>
                 <span>9.2</span>
               </div>
-
-#
-
               <div class="favorite">
                 <img src="images/heart.svg" alt="Star Icon"/>
                 <span>Favoritar</span>
@@ -88,24 +65,16 @@
             </div>
           </div>
         </div>
-
-#
-
         <div class="movie-description">
           <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</span>
         </div>
       </div>
 
-#
-
       <div class="movie">
         <div class="movie-informations">
           <div class="movie-image">
             <img src="https://img.elo7.com.br/product/original/3FBA809/big-poster-filme-batman-2022-90x60-cm-lo002-poster-batman.jpg" alt="Batman (2022)"/>
           </div>
-
-#
-
           <div class="movie-text">
             <h4>Batman (2022)</h4>
             <div class="rating-favorites">
@@ -113,9 +82,6 @@
                 <img src="images/star.png" alt="Star Icon"/>
                 <span>9.2</span>
               </div>
-
-#
-
               <div class="favorite">
                 <img src="images/heart.svg" alt="Star Icon"/>
                 <span>Favoritar</span>
@@ -123,9 +89,6 @@
             </div>
           </div>
         </div>
-
-#
-
         <div class="movie-description">
           <span>Lorem Ipsum is simply Lar dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</span>
         </div>
