--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="movie">
         <div class="movie-informations">
           <div class="movie-image">
-            <img src="https://upload.wikimedia.org/wikipedia/pt/d/d2/Venom_-_The_Last_Dance_p%C3%B4ster.jpg" alt="Batman (2022)"/>
+            <img src="https://upload.wikimedia.org/wikipedia/pt/d/d2/Venom_-_The_Last_Dance_p%C3%B4ster.jpg" alt="Venom (2024)"/>
           </div>
           <div class="movie-text">
             <h4>Venom (2024)</h4>
@@ -49,14 +49,14 @@
       <div class="movie">
         <div class="movie-informations">
           <div class="movie-image">
-            <img src="https://img.elo7.com.br/product/original/3FBA809/big-poster-filme-batman-2022-90x60-cm-lo002-poster-batman.jpg" alt="Batman (2022)"/>
+            <img src="https://br.web.img3.acsta.net/pictures/19/05/29/20/17/5905985.jpg" alt="Meu Amigo Enzo (2019)"/>
           </div>
           <div class="movie-text">
-            <h4>Batman (2022)</h4>
+            <h4>Meu Amigo Enzo (2019)</h4>
             <div class="rating-favorites">
               <div class="rating">
                 <img src="images/star.png" alt="Star Icon"/>
-                <span>9.2</span>
+                <span>10.0</span>
               </div>
               <div class="favorite">
                 <img src="images/heart.svg" alt="Star Icon"/>
@@ -66,7 +66,7 @@
           </div>
         </div>
         <div class="movie-description">
-          <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</span>
+          <span>Um cachorro muito inteligente passa os dias filosofando e aprendendo o que é ser humano a partir das observações que faz sobre a vida de seu dono, o piloto Denny Swift.</span>
         </div>
       </div>
 
