--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -25,31 +25,7 @@
       <div class="movie">
         <div class="movie-informations">
           <div class="movie-image">
-            <img src="https://upload.wikimedia.org/wikipedia/pt/d/d2/Venom_-_The_Last_Dance_p%C3%B4ster.jpg" alt="Venom (2024)"/>
-          </div>
-          <div class="movie-text">
-            <h4>Venom (2024)</h4>
-            <div class="rating-favorites">
-              <div class="rating">
-                <img src="images/star.png" alt="Star Icon"/>
-                <span>10.0</span>
-              </div>
-              <div class="favorite">
-                <img src="images/heart.svg" alt="Star Icon"/>
-                <span>Favoritar</span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="movie-description">
-          <span>Eddie Brock e Venom precisam tomar uma decisão enquanto são perseguidos por um militar misterioso e monstros alienígenas do planeta natal de Venom.</span>
-        </div>
-      </div>
-
-      <div class="movie">
-        <div class="movie-informations">
-          <div class="movie-image">
-            <img src="https://br.web.img3.acsta.net/pictures/19/05/29/20/17/5905985.jpg" alt="Meu Amigo Enzo (2019)"/>
+            <img src="https://br.web.img3.acsta.net/pictures/19/05/29/20/17/5905985.jpg" alt="Meu Amigo Enzo(2019)"/>
           </div>
           <div class="movie-text">
             <h4>Meu Amigo Enzo (2019)</h4>
@@ -67,6 +43,30 @@
         </div>
         <div class="movie-description">
           <span>Um cachorro muito inteligente passa os dias filosofando e aprendendo o que é ser humano a partir das observações que faz sobre a vida de seu dono, o piloto Denny Swift.</span>
+        </div>
+      </div>
+
+      <div class="movie">
+        <div class="movie-informations">
+          <div class="movie-image">
+            <img src="https://lumiere-a.akamaihd.net/v1/images/7e31d6246c6f32fbb227b4739fb5440f_da23af1f.jpeg" alt="Mufasa (2024)"/>
+          </div>
+          <div class="movie-text">
+            <h4>Mufasa: O Rei Leão (2024)</h4>
+            <div class="rating-favorites">
+              <div class="rating">
+                <img src="images/star.png" alt="Star Icon"/>
+                <span>9.5</span>
+              </div>
+              <div class="favorite">
+                <img src="images/heart.svg" alt="Star Icon"/>
+                <span>Favoritar</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="movie-description">
+          <span>Mufasa, um filhote órfão, perdido e sozinho, conhece um simpático leão chamado Taka, herdeiro de uma linhagem real. O encontro ao acaso dá início a uma grande jornada de um grupo extraordinário em busca de seu destino, além de revelar a ascensão de um dos maiores reis das Terras do Orgulho.</span>
         </div>
       </div>
 
