--- a/index.html
+++ b/index.html
@@ -168,6 +168,30 @@
           <span>Três mulheres sobrecarregadas com as responsabilidades e desafios do Natal decidem se rebelar contra a obrigação e o pouco reconhecimento de garantir a festa perfeita para a família, ao mesmo tempo em que precisam fazer sala para suas próprias mães.</span>
         </div>
       </div>
+
+//dark-light//
+
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css">
+    <title>Dark Theme</title>
+
+  </head>
+  <body>
+    <div>
+      <input type="checkbox" class="checkbox" id="chk" />
+      <label class="label" for="chk">
+        <i class="fas fa-moon"></i>
+        <i class="fas fa-sun"></i>
+        <div class="ball"></div>
+      </label>
+    </div>
+
+    <script src="script.js"></script>
+    <script src="https://kit.fontawesome.com/998c60ef77.js" crossorigin="anonymous"></script>
+  </body>
     </div>
   </main>
 </body>
