--- a/index.html
+++ b/index.html
@@ -168,3 +168,10 @@
           <span>Três mulheres sobrecarregadas com as responsabilidades e desafios do Natal decidem se rebelar contra a obrigação e o pouco reconhecimento de garantir a festa perfeita para a família, ao mesmo tempo em que precisam fazer sala para suas próprias mães.</span>
         </div>
       </div>
+
+Adicionar
+- Lilo e Stich (Live Action) 3/10
+- Como Treinar o Seu Dragão (Live Action) 10/10
+- Projeto Almanaque 10/10
+- Amores Materialistas 8/10
+- A Incrivel História de Adaline 9/10
