Update footer copyright and social links
Signed-off-by: Otávio Phellipe <158775823+otaviophellipe@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -22,23 +22,20 @@
     </div>
 
   <footer style="text-align: center;">
-    <p>&copy; 2025 CodeByTavio. Todos os direitos reservados.</p>
+    <p>&copy; Todos os direitos reservados.</p>
     <p>Code By:</p>
-    <div style="display: flex; justify-content: center; gap: 20px; align-items: center; margin-top: 10px;"></div>">
-      <div style="text-align: center;">
-        <p style="margin: 0; font-weight: bold;">Otavio Phellipe</p>
-        <a href="https://github.com/otaviophellipe" target="_blank" title="GitHub - Otavio Phellipe">
-          <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub" style="width: 30px; margin: 5px;">
-        </a>
-        <a href="https://www.linkedin.com/in/otaviophellipe/" target="_blank" title="LinkedIn - Otavio Phellipe">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" style="width: 30px; margin: 5px;">
-        </a>
-      </div>
+    <div style="text-align: center;">
+      <a href="https://github.com/otaviophellipe" target="_blank" title="GitHub - Otavio Phellipe">
+        <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub" style="width: 30px; margin: 5px;">
+      </a>
+      <a href="https://www.linkedin.com/in/otaviophellipe/" target="_blank" title="LinkedIn - Otavio Phellipe">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" style="width: 30px; margin: 5px;">
+      </a>
     </div>
   </footer>
-
   </main>
   <script>
+    
     const movies = [
     {
       title: "Meu Amigo Enzo (2019)",
@@ -57,6 +54,12 @@
       image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRi-ONzobpIVhoynhX5CVZu39wV3x4QdNCTeg&s",
       rating: "10.0",
       description: "Um grupo de adolescentes descobre os planos e projetos secretos para construir uma máquina do tempo. Eles decidem usá-la para solucionar problemas do passado e obter grandes benefícios."
+    },
+            {
+      title: "Caramelo (2025)",
+      image: "https://i.ytimg.com/vi/qH8FTrli7ug/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLA_4qqUcPZcH-ItJ0KCf9Q9Zfiauw",
+      rating: "9.5",
+      description: "Pedro é um chef em ascensão que sonha em comandar seu próprio restaurante. Após receber um diagnóstico grave, ele redescobre a graça da vida com a ajuda de um vira-lata caramelo."
     },
     {
       title: "Mufasa: O Rei Leão (2024)",
@@ -155,4 +158,3 @@
 
 <button id="theme-toggle" style="position: fixed; top: 10px; right: 10px; background: none; border: none; font-size: 24px; cursor: pointer;">🌙</button>
 <script src="script.js"></script>
-
